# multimedia

./: .gitignore  android_buid.sh
Application/Android/FFmpegSample/: .gitignore
Application/Android/FFmpegSample/app/: build.gradle
Application/Android/FFmpegSample/app/src/main/cpp/: CMakeLists.txt  dataClient.h  dataCline.cpp  native-lib.cpp
Application/Android/FFmpegSample/gradle/wrapper/: gradle-wrapper.properties
Application/Android/Mp3Encoder/app/: build.gradle
Application/Android/Mp3Encoder/gradle/wrapper/: gradle-wrapper.properties
Application/QT/KLPlayer/: KLPlayer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xdecode.cpp  xdecode.h  xdemux.cpp  xdemux.h  xresample.cpp  xresample.h  xvideowidget.cpp  xvideowidget.h
Application/QT/Opencv/CVInstallTest/: CMakeLists.txt  main.cpp
Application/QT/Opencv/CVVideoCapture/: CMakeLists.txt  main.cpp
Application/QT/QTFFmpeg/: QTFFmpeg.pro  cameraclient.cpp  cameraclient.h  cctcpdatadefine.h  h264decoder.cpp  h264decoder.cpp.autosave  h264decoder.h  main.cpp  mainwindow.cpp  mainwindow.h
Application/QT/SIOTCamera/: SIOTCamera.pro  msgdefine.h  msgdefine.h.autosave  socketserver.cpp  socketserver.cpp.autosave  socketserver.h
Application/QT/build-QTFFmpeg-Desktop_Qt_5_13_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp
Application/QT/build-SIOTCamera-Desktop_Qt_5_13_0_clang_64bit-Debug/: Makefile  SIOTCamera
FFmpeg/: build_pc.sh
FFmpeg/fflib/pc/lib/: libavutil.56.22.100.dylib  libswscale.5.3.100.dylib
FFmpeg/ffmpeg-4.1.42/: config.h
FFmpeg/ffmpeg-4.1.42/doc/: config.texi
FFmpeg/ffmpeg-4.1.42/ffbuild/: config.fate  config.mak  config.sh
Opencv/: build_pc.sh
Opencv/cvlib/pc/lib/: libopencv_calib3d.3.4.15.dylib  libopencv_dnn.3.4.15.dylib  libopencv_dnn.3.4.dylib  libopencv_features2d.3.4.15.dylib  libopencv_flann.3.4.15.dylib  libopencv_flann.3.4.dylib  libopencv_highgui.3.4.15.dylib  libopencv_imgcodecs.3.4.15.dylib  libopencv_ml.3.4.15.dylib  libopencv_ml.3.4.dylib  libopencv_objdetect.3.4.15.dylib  libopencv_objdetect.3.4.dylib  libopencv_photo.3.4.15.dylib  libopencv_photo.3.4.dylib  libopencv_shape.3.4.15.dylib  libopencv_shape.3.4.dylib  libopencv_stitching.3.4.15.dylib  libopencv_stitching.3.4.dylib  libopencv_superres.3.4.15.dylib  libopencv_superres.3.4.dylib  libopencv_video.3.4.15.dylib  libopencv_video.3.4.dylib  libopencv_videoio.3.4.15.dylib  libopencv_videostab.3.4.15.dylib  libopencv_videostab.3.4.dylib
fflib/pc/lib/: libavfilter.7.40.101.dylib  libavformat.58.20.100.dylib  libswresample.3.3.100.dylib
fflib/pc/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libswresample.pc
ffmpeg-4.1.42/: config.asm  config.h
ffmpeg-4.1.42/doc/: config.texi
ffmpeg-4.1.42/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-4.1.42/libavfilter/: libavfilter.pc
ffmpeg-4.1.42/libavformat/: libavformat.pc
ffmpeg-4.1.42/libavutil/: libavutil.pc
ffmpeg-4.1.42/libswresample/: libswresample.pc
ffmpeg-4.1.42/libswscale/: libswscale.pc
(+24 files in other folders)
